<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ecstasy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="feed">Feed</string>
    <string name="friends">My Friends</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="audi">Audi</string>
    <string name="copy_link">Copy Link</string>
    <string name="_3_5m">3.5M</string>
    <string name="_3450">3450</string>
    <string name="_2889">2889</string>
    <string name="_299">299</string>
    <string name="share">SHARE</string>
    <string name="audindia">\@AUDINDIA</string>
    <string name="_24k">24K</string>
    <string name="admirers">ADMIRERS</string>
    <string name="_18k">18K</string>
    <string name="shares">SHARES</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="admiring">ADMIRING</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="about">ABOUT</string>
    <string name="log_out">LOG OUT</string>
    <string name="audi_on_the_moon">Audi on the moon</string>
    <string name="avisharma">\@avisharma</string>
    <string name="best_advertisement_for_the_best_vehicle_in_town">Best Advertisement for the best vehicle in town.\n  \@shubhansal Gift me this.</string>
    <string name="nameofadmirers">NAMEOFADMIRERS</string>
    <string name="do_you_really_wants_to_un">Do you really wants to un:</string>
    <string name="yes">Yes</string>
    <string name="_NO">NO</string>
    <string name="send_to">Send</string>
    <string name="tell_something_about_it">Tell Something about it</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="searchyourname">SearcHYourName</string>
    <string name="title_activity_profile_of_others">ProfileOfOthers</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="blood_shed">BLood Shed</string>
    <string name="continue_as_artist">Join As An Artist</string>
    <string name="continue_as_audience">Join As An Audience</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="login_with_facebook">Continue with Facebook</string>
    <string name="we_client_id" tools:ignore="TypographyDashes">456277723625-epsqh39clcqu9duqc6m9bk78dli9ckqo.apps.googleusercontent.com</string>
    <string name="facebook_app_id">350792782922459</string>
    <string name="fb_login_protocol_scheme">fb350792782922459</string>
    <string name="title">TITLE</string>
    <string name="done">DONE</string>
    <string name="home">Home</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="delete">Delete</string>
    <string name="_" />
    <string name="artists">Artists</string>
    <string name="can_be_friends">Can be Friends</string>
    <string name="friend_request">Friend Request</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="playlist">Playlist</string>
    <string name="explore">Explore</string>
    <string name="_140_140">140/140</string>
    <string name="__" />
    <string name="cancel">Cancel</string>
    <string name="done2">Done</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="enter_your_website">Enter your website</string>
    <string name="bio">Bio</string>
    <string name="enter_a_bio">Enter a bio</string>
    <string name="email">Email</string>
    <string name="admire">Admire</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_caption_for_video">Your Caption For Video</string>
    <string name="add_friends">People I May Know</string>
    <string name="caption">Caption</string>
    <string name="title2">Title</string>
    <string name="description">Description</string>
    <string name="no_description">No Description</string>
    <string name="copy">Copy</string>
    <string name="phone_number">Phone Number</string>
    <string name="you_have_no_new_notifications">You have no new notifications</string>
    <string name="msg_subscribed">msg subscribed</string>
    <string name="msg_subscribe_failed">msg subscribe failed</string>
</resources>
