<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feed"
        android:icon="@drawable/ic_view_carousel_black_24dp"
        android:title="@string/feed" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />


    <item
        android:title="@string/artists"
        android:id="@+id/friends"
        android:icon="@drawable/ic_people_black_24dp"
        />
    <item
        android:title="@string/friends"
        android:icon="@drawable/ic_baseline_person_add_24"
        android:id="@+id/friends2"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/profile" />
</menu>