<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    tools:context=".Activities.Edit_profile">
    <LinearLayout
        android:weightSum="4"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/cancel"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:layout_width="0dp"
            android:textSize="15sp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/doneV"
            android:padding="10dp"
            android:background="@android:color/black"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/done2"
            android:textStyle="bold"
            android:textColor="#20639B"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <LinearLayout
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewForEP"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:src="@drawable/ic_account_circle_black_24dp"
        android:layout_height="120dp"/>
    <TextView
        android:id="@+id/changeProfileImage"
        android:layout_marginTop="10dp"
        android:text="@string/change_profile_photo"
        android:layout_gravity="center"
        android:textColor="#20639B"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textSize="12sp"
            android:layout_height="match_parent"/>
        <EditText
            android:textSize="12sp"
            android:id="@+id/nameForEP"
            android:paddingStart="60dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:text="@string/name"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:background="#f2f2f2"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_margin="10dp"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textSize="12sp"
            android:layout_height="match_parent"/>
        <EditText
            android:textSize="12sp"
            android:id="@+id/usernameForEP"
            android:paddingStart="60dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:text="@string/username"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:background="#f2f2f2"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/phone_number"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textSize="12sp"
            android:layout_height="match_parent"/>
        <EditText
            android:textSize="12sp"
            android:id="@+id/phonenumberForEP"
            android:paddingStart="60dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:text="@string/phone_number"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:background="#f2f2f2"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
<!--    <LinearLayout-->
<!--        android:layout_margin="10dp"-->
<!--        android:weightSum="4"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="40dp">-->
<!--        <TextView-->
<!--            android:layout_weight="1"-->
<!--            android:layout_width="0dp"-->
<!--            android:text="@string/email"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:gravity="center_vertical"-->
<!--            android:padding="10dp"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_height="match_parent"/>-->
<!--        <TextView-->
<!--            android:textSize="15sp"-->
<!--            android:id="@+id/emailForEP"-->
<!--            android:gravity="center_vertical"-->
<!--            android:paddingStart="60dp"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:layout_weight="3"-->
<!--            android:layout_width="0dp"-->
<!--            android:text="@string/email"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:layout_height="match_parent"-->
<!--            tools:ignore="RtlSymmetry,TextViewEdits" />-->
<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:background="#f2f2f2"-->
<!--        android:layout_marginStart="150dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"/>-->
    <LinearLayout
        android:layout_margin="10dp"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/website"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textSize="12sp"
            android:layout_height="match_parent"/>
        <EditText
            android:textSize="12sp"
            android:id="@+id/website"
            android:paddingStart="60dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:hint="@string/enter_your_website"
            android:textColorHint="#A9A9A9"
            android:inputType="textUri"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:background="#f2f2f2"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_margin="10dp"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/bio"
            android:textColor="@android:color/white"
            android:gravity="start|center_vertical"
            android:padding="10dp"
            android:textSize="12sp"
            android:layout_height="match_parent"/>
        <EditText
            android:textSize="12sp"
            android:id="@+id/bioForEp"
            android:paddingStart="60dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:hint="@string/enter_a_bio"
            android:gravity="start"
            android:textColor="@android:color/white"
            android:textColorHint="#A9A9A9"
            android:inputType="textMultiLine"
            android:layout_height="match_parent"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ProgressBar
        android:id="@+id/progressBarini"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:indeterminateTint="@android:color/holo_blue_light" />

</LinearLayout>