<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/curve_shape"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:text="@string/your_caption_for_video"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="2dp"/>
    <EditText
        android:id="@+id/editTextForSharing"
        android:textAlignment="viewStart"
        android:minLines="5"
        android:inputType="textMultiLine"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/caption"
        android:text="@string/_140_140"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_marginEnd="26dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
    android:id="@+id/sendLink"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:text="@string/send_to"
    android:theme="@style/AppTheme.Button"
    android:textStyle="bold"
    android:textColor="@android:color/white"
    android:textAllCaps="false"
    android:layout_gravity="end"
    app:cornerRadius="15dp"
    android:layout_marginEnd="10dp"
    />
</LinearLayout>