<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curve_shape"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="20dp"
        android:id="@+id/imageViewForAlertDialog"
        android:layout_gravity="center"
        android:layout_width="60dp"
        android:layout_marginBottom="20sp"
        android:src="@mipmap/ic_launcher"
        android:background="@android:color/white"
        app:civ_border_color="@android:color/white"
        android:layout_height="60dp"/>


    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/do_you_really_wants_to_un"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:weightSum="2"
        android:orientation="horizontal" >

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:shadowColor="@android:color/black"
            style="@style/AppTheme" />

        <Button
            style="@style/AppTheme"
            android:layout_weight="1"
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:shadowColor="@android:color/black"
            android:textColor="@android:color/black"
            android:text="@string/_NO"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>