<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
                <LinearLayout
                    android:weightSum="6"
                    android:background="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:civ_circle_background_color="@android:color/black"
                        android:src="@drawable/ic_account_circle_black_24dp"/>
                    <LinearLayout
                        android:layout_weight="2"
                        android:background="@android:color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_height="35dp">
                        <TextView
                            android:id="@+id/profile_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:gravity="center"
                            />
                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_"
                            android:textColor="@android:color/black"
                            android:gravity="center"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <ImageButton
                        android:layout_marginStart="6dp"
                        android:id="@+id/imageButtonPf"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:background="@android:color/white"
                        android:src="@drawable/ic_add_box_black_24dp"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        tools:ignore="ContentDescription" />
                    <LinearLayout
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_height="40dp">
                        <TextView
                            android:id="@+id/sharecount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            />
                        <TextView
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/shares"
                            android:textAllCaps="false"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"/>

                    </LinearLayout>
                    <ImageView
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:id="@+id/imageViewForPf"
                        android:src="@drawable/ic_menu_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <androidx.recyclerview.widget.RecyclerView
            android:background="@android:color/black"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/recyclerViewForProfileFrg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonAbout"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/buttonTNC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/terms_and_conditions"
                />
            <Button
                android:id="@+id/buttonPP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/privacy_policy"
                />

            <Button
                android:id="@+id/edit_profile"
                android:text="@string/edit_profile"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                />
            <Button
                android:id="@+id/friendRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friend_request"
                android:textColor="@android:color/black"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="15sp"
                />
            <Button
                android:id="@+id/logout"
                android:text="@string/log_out"
                android:layout_marginTop="200dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>

